# java_jni

./: .gitignore  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  HelloWorld.java  README.md  main.cpp
